# python-clean-flask-sqlalchemy

./: .gitignore  README.md  pyproject.toml  run.py
app/main/: __init__.py
app/main/controller/: example_controller.py
app/main/model/: example_model.py
app/main/repository/: example_repository.py
app/main/service/: example_service.py
instance/: config.py
